--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-bootstrap5 = "^24.2"
 whitenoise = "^6.7.0"
 dj-database-url = "^2.2.0"
 django-filter = "^24.3"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
