--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ whitenoise = "^6.7.0"
 dj-database-url = "^2.2.0"
 django-filter = "^24.3"
 python-dotenv = "^1.0.1"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
