--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dj-database-url = "^2.2.0"
 django-filter = "^24.3"
 python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
+psycopg2-binary = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
