--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-filter = "^24.3"
 python-dotenv = "^1.0.1"
 gunicorn = "^23.0.0"
 psycopg2-binary = "^2.9.10"
+rollbar = "^1.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
