--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ rollbar = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.0"
+coverage = "^7.6.12"
+codeclimate-test-reporter = "^0.2.3"
 
 [build-system]
 requires = ["poetry-core"]
