--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -20,6 +20,10 @@ jobs:
         run: |
           pip install poetry
           make install
-      - name: Run linter
-        run: |
-          make lint
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage-report
+          debug: true
