--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -22,6 +22,7 @@ jobs:
           make install
       - name: Publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
+        if: github.ref_name == 'main'
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
