--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           pip install poetry
           make install
+      - name: Run tests
+        run: |
+          make test
