--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -4,6 +4,10 @@ on:
   - push
   - pull_request
 
+env:
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
