--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -42,7 +42,8 @@ jobs:
       - name: Run migrations
         env:
           DATABASE_URL: postgres://user:password@localhost:5432/test_db
-        run: python manage.py migrate
+        run: |
+          make migrate
 
       - name: Run tests
         run: |
