--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -48,6 +48,14 @@ jobs:
         run: |
           make migrate
 
-      - name: Run tests
+      - name: Check coverage
         run: |
-          make test
+          make check-coverage
+
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make coverage-report
+          debug: true
