--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -25,7 +25,8 @@ jobs:
           - 5432:5432
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
